// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should contain correct scss content for file ./dist/_blur.scss 1`] = `
"$blur-frosted: blur(32px);
// @deprecated Use $blur-frosted instead. This API will be removed with the next major release.
@mixin pds-frosted-glass {
  backdrop-filter: blur(32px);
  -webkit-backdrop-filter: blur(32px);
}
"
`;

exports[`should contain correct scss content for file ./dist/_border.scss 1`] = `
"$radius-xs: 2px;
$radius-sm: 4px;
$radius-md: 6px;
$radius-lg: 8px;
$radius-xl: 12px;
$radius-2xl: 16px;
$radius-3xl: 24px;
$radius-4xl: 32px;
$radius-full: calc(infinity * 1px);
// @deprecated Use $radius-sm instead. This API will be removed with the next major release.
$pds-border-radius-small: 4px;
// @deprecated Use $radius-md instead. This API will be removed with the next major release.
$pds-border-radius-medium: 6px;
// @deprecated Use $radius-lg instead. This API will be removed with the next major release.
$pds-border-radius-large: 8px;
// @deprecated This API will be removed with the next major release.
$pds-border-width-base: 2px;
// @deprecated This API will be removed with the next major release.
$pds-border-width-thin: 1px;
"
`;

exports[`should contain correct scss content for file ./dist/_breakpoint.scss 1`] = `
"$breakpoint-xs: 480;
$breakpoint-sm: 760;
$breakpoint-md: 1000;
$breakpoint-lg: 1300;
$breakpoint-xl: 1760;
$breakpoint-2xl: 1920;
// @deprecated This API will be removed with the next major release.
$pds-breakpoint-base: 0;
// @deprecated Use $breakpoint-xs instead. This API will be removed with the next major release.
$pds-breakpoint-xs: 480;
// @deprecated Use $breakpoint-sm instead. This API will be removed with the next major release.
$pds-breakpoint-s: 760;
// @deprecated Use $breakpoint-md instead. This API will be removed with the next major release.
$pds-breakpoint-m: 1000;
// @deprecated Use $breakpoint-lg instead. This API will be removed with the next major release.
$pds-breakpoint-l: 1300;
// @deprecated Use $breakpoint-xl instead. This API will be removed with the next major release.
$pds-breakpoint-xl: 1760;
// @deprecated Use $breakpoint-2xl instead. This API will be removed with the next major release.
$pds-breakpoint-xxl: 1920;
"
`;

exports[`should contain correct scss content for file ./dist/_color.scss 1`] = `
"$color-canvas: var(--_color-canvas, light-dark(#fff, hsl(225 66.7% 1.2%)));
$color-surface: var(
  --_color-surface,
  light-dark(hsl(240 10% 95%), hsl(240 2% 10%))
);
$color-frosted: var(
  --_color-frosted,
  light-dark(hsl(240 5% 70% / 0.148), hsl(240 2% 43% / 0.228))
);
$color-frosted-soft: var(
  --_color-frosted-soft,
  light-dark(hsl(234 9.8% 60% / 0.06), hsl(240 3.7% 26.5% / 0.154))
);
$color-frosted-strong: var(
  --_color-frosted-strong,
  light-dark(hsl(236 6.5% 42% / 0.236), hsl(240 1.5% 61.8% / 0.302))
);
$color-backdrop: var(
  --_color-backdrop,
  light-dark(hsl(240 5.3% 14.9% / 0.5), hsl(240 5.3% 14.9% / 0.5))
);
$color-primary: var(
  --_color-primary,
  light-dark(hsl(225 66.7% 1.2%), hsl(225 100% 99%))
);
$color-contrast-higher: var(
  --_color-contrast-higher,
  light-dark(hsl(240 8.7% 9% / 0.8), hsl(240 12.5% 96.9% / 0.78))
);
$color-contrast-high: var(
  --_color-contrast-high,
  light-dark(hsl(240 7.1% 11% / 0.7), hsl(240 12.5% 96.9% / 0.67))
);
$color-contrast-medium: var(
  --_color-contrast-medium,
  light-dark(hsl(240 6.1% 7% / 0.6), hsl(240 12.5% 96.9% / 0.56))
);
$color-contrast-low: var(
  --_color-contrast-low,
  light-dark(hsl(240 5.3% 14.9% / 0.5), hsl(240 12.5% 96.9% / 0.45))
);
$color-contrast-lower: var(
  --_color-contrast-lower,
  light-dark(hsl(234 6% 32.9% / 0.324), hsl(240 1.5% 61.8% / 0.302))
);
$color-info: var(
  --_color-info,
  light-dark(hsl(228 83.2% 51%), hsl(210 100% 54.5%))
);
$color-info-medium: var(
  --_color-info-medium,
  light-dark(hsl(228 83.2% 51% / 0.6), hsl(210 100% 54.5% / 0.6))
);
$color-info-low: var(
  --_color-info-low,
  light-dark(hsl(228 83.2% 51% / 0.18), hsl(210 100% 54.5% / 0.18))
);
$color-info-frosted: var(
  --_color-info-frosted,
  light-dark(hsl(211 100% 90% / 0.55), hsl(210 79% 20% / 0.66))
);
$color-info-frosted-soft: var(
  --_color-info-frosted-soft,
  light-dark(hsl(211 80% 95% / 0.55), hsl(210 59% 15% / 0.66))
);
$color-success: var(
  --_color-success,
  light-dark(hsl(115 77.5% 27.8%), hsl(157 84.9% 41.6%))
);
$color-success-medium: var(
  --_color-success-medium,
  light-dark(hsl(115 77.5% 27.8% / 0.6), hsl(157 84.9% 41.6% / 0.6))
);
$color-success-low: var(
  --_color-success-low,
  light-dark(hsl(115 77.5% 27.8% / 0.18), hsl(157 84.9% 41.6% / 0.18))
);
$color-success-frosted: var(
  --_color-success-frosted,
  light-dark(hsl(109 100% 90% / 0.55), hsl(157 79% 20% / 0.66))
);
$color-success-frosted-soft: var(
  --_color-success-frosted-soft,
  light-dark(hsl(109 80% 95% / 0.55), hsl(157 59% 15% / 0.66))
);
$color-warning: var(
  --_color-warning,
  light-dark(hsl(28 97.7% 34.1%), hsl(28 90.2% 56.1%))
);
$color-warning-medium: var(
  --_color-warning-medium,
  light-dark(hsl(28 97.7% 34.1% / 0.6), hsl(28 90.2% 56.1% / 0.6))
);
$color-warning-low: var(
  --_color-warning-low,
  light-dark(hsl(28 97.7% 34.1% / 0.18), hsl(28 90.2% 56.1% / 0.18))
);
$color-warning-frosted: var(
  --_color-warning-frosted,
  light-dark(hsl(40 100% 90% / 0.55), hsl(52 79% 20% / 0.66))
);
$color-warning-frosted-soft: var(
  --_color-warning-frosted-soft,
  light-dark(hsl(40 80% 95% / 0.55), hsl(52 59% 15% / 0.66))
);
$color-error: var(
  --_color-error,
  light-dark(hsl(357 78% 41%), hsl(0 96.9% 62%))
);
$color-error-medium: var(
  --_color-error-medium,
  light-dark(hsl(357 78% 41% / 0.6), hsl(0 96.9% 62% / 0.6))
);
$color-error-low: var(
  --_color-error-low,
  light-dark(hsl(357 78% 41% / 0.18), hsl(0 96.9% 62% / 0.18))
);
$color-error-frosted: var(
  --_color-error-frosted,
  light-dark(hsl(0 100% 90% / 0.55), hsl(0 79% 20% / 0.66))
);
$color-error-frosted-soft: var(
  --_color-error-frosted-soft,
  light-dark(hsl(0 80% 95% / 0.55), hsl(0 59% 15% / 0.66))
);
$color-focus: var(--_color-focus, light-dark(#1a44ea, #1a44ea));
// @deprecated Use $color-primary instead. This API will be removed with the next major release.
$pds-theme-light-primary: hsl(225 66.7% 1.2%);
// @deprecated Use $color-canvas instead. This API will be removed with the next major release.
$pds-theme-light-background-base: #fff;
// @deprecated Use $color-surface instead. This API will be removed with the next major release.
$pds-theme-light-background-surface: hsl(240 10% 95%);
// @deprecated Use $color-backdrop instead. This API will be removed with the next major release.
$pds-theme-light-background-shading: hsl(240 5.3% 14.9% / 0.5);
// @deprecated Use $color-frosted instead. This API will be removed with the next major release.
$pds-theme-light-background-frosted: hsl(240 5% 70% / 0.148);
// @deprecated Use $color-contrast-low instead. This API will be removed with the next major release.
$pds-theme-light-contrast-low: hsl(240 5.3% 14.9% / 0.5);
// @deprecated Use $color-contrast-medium instead. This API will be removed with the next major release.
$pds-theme-light-contrast-medium: hsl(240 6.1% 7% / 0.6);
// @deprecated Use $color-contrast-high instead. This API will be removed with the next major release.
$pds-theme-light-contrast-high: hsl(240 7.1% 11% / 0.7);
// @deprecated Use $color-success instead. This API will be removed with the next major release.
$pds-theme-light-notification-success: hsl(115 77.5% 27.8%);
// @deprecated Use $color-success-frosted instead. This API will be removed with the next major release.
$pds-theme-light-notification-success-soft: hsl(109 100% 90% / 0.55);
// @deprecated Use $color-warning instead. This API will be removed with the next major release.
$pds-theme-light-notification-warning: hsl(28 97.7% 34.1%);
// @deprecated Use $color-warning-frosted instead. This API will be removed with the next major release.
$pds-theme-light-notification-warning-soft: hsl(40 100% 90% / 0.55);
// @deprecated Use $color-error instead. This API will be removed with the next major release.
$pds-theme-light-notification-error: hsl(357 78% 41%);
// @deprecated Use $color-error-frosted instead. This API will be removed with the next major release.
$pds-theme-light-notification-error-soft: hsl(0 100% 90% / 0.55);
// @deprecated Use $color-info instead. This API will be removed with the next major release.
$pds-theme-light-notification-info: hsl(228 83.2% 51%);
// @deprecated Use $color-info-frosted instead. This API will be removed with the next major release.
$pds-theme-light-notification-info-soft: hsl(211 100% 90% / 0.55);
// @deprecated This API will be removed with the next major release.
$pds-theme-light-state-hover: hsla(236, 6.4%, 51%, 0.148);
// @deprecated This API will be removed with the next major release.
$pds-theme-light-state-active: hsla(236, 6.4%, 51%, 0.148);
// @deprecated Use $color-focus instead. This API will be removed with the next major release.
$pds-theme-light-state-focus: #1a44ea;
// @deprecated This API will be removed with the next major release.
$pds-theme-light-state-disabled: hsla(233, 6.6%, 23.9%, 0.412);
// @deprecated Use $color-primary instead. This API will be removed with the next major release.
$pds-theme-dark-primary: hsl(225 100% 99%);
// @deprecated Use $color-canvas instead. This API will be removed with the next major release.
$pds-theme-dark-background-base: hsl(225 66.7% 1.2%);
// @deprecated Use $color-surface instead. This API will be removed with the next major release.
$pds-theme-dark-background-surface: hsl(240 2% 10%);
// @deprecated Use $color-backdrop instead. This API will be removed with the next major release.
$pds-theme-dark-background-shading: hsl(240 5.3% 14.9% / 0.5);
// @deprecated Use $color-frosted instead. This API will be removed with the next major release.
$pds-theme-dark-background-frosted: hsl(240 2% 43% / 0.228);
// @deprecated Use $color-contrast-low instead. This API will be removed with the next major release.
$pds-theme-dark-contrast-low: hsl(240 12.5% 96.9% / 0.45);
// @deprecated Use $color-contrast-medium instead. This API will be removed with the next major release.
$pds-theme-dark-contrast-medium: hsl(240 12.5% 96.9% / 0.56);
// @deprecated Use $color-contrast-high instead. This API will be removed with the next major release.
$pds-theme-dark-contrast-high: hsl(240 12.5% 96.9% / 0.67);
// @deprecated Use $color-success instead. This API will be removed with the next major release.
$pds-theme-dark-notification-success: hsl(157 84.9% 41.6%);
// @deprecated Use $color-success-frosted instead. This API will be removed with the next major release.
$pds-theme-dark-notification-success-soft: hsl(157 79% 20% / 0.66);
// @deprecated Use $color-warning instead. This API will be removed with the next major release.
$pds-theme-dark-notification-warning: hsl(28 90.2% 56.1%);
// @deprecated Use $color-warning-frosted instead. This API will be removed with the next major release.
$pds-theme-dark-notification-warning-soft: hsl(52 79% 20% / 0.66);
// @deprecated Use $color-error instead. This API will be removed with the next major release.
$pds-theme-dark-notification-error: hsl(0 96.9% 62%);
// @deprecated Use $color-error-frosted instead. This API will be removed with the next major release.
$pds-theme-dark-notification-error-soft: hsl(0 79% 20% / 0.66);
// @deprecated Use $color-info instead. This API will be removed with the next major release.
$pds-theme-dark-notification-info: hsl(210 100% 54.5%);
// @deprecated Use $color-info-frosted instead. This API will be removed with the next major release.
$pds-theme-dark-notification-info-soft: hsl(210 79% 20% / 0.66);
// @deprecated This API will be removed with the next major release.
$pds-theme-dark-state-hover: hsla(240, 2.2%, 44.1%, 0.228);
// @deprecated This API will be removed with the next major release.
$pds-theme-dark-state-active: hsla(240, 2.2%, 44.1%, 0.228);
// @deprecated Use $color-focus instead. This API will be removed with the next major release.
$pds-theme-dark-state-focus: #1a44ea;
// @deprecated This API will be removed with the next major release.
$pds-theme-dark-state-disabled: hsla(240, 1.5%, 61.8%, 0.302);

@mixin color-scheme() {
  .scheme-normal {
    color-scheme: normal;
  }
  .scheme-dark {
    color-scheme: dark;
  }
  .scheme-light {
    color-scheme: light;
  }
  .scheme-light-dark {
    color-scheme: light dark;
  }
  .scheme-only-dark {
    color-scheme: only dark;
  }
  .scheme-only-light {
    color-scheme: only light;
  }

  @supports not (color: light-dark(white, black)) {
    :root,
    .scheme-light,
    .scheme-only-light,
    .scheme-normal,
    .scheme-light-dark {
      --_color-focus: #1a44ea;
      --_color-canvas: #fff;
      --_color-surface: hsl(240 10% 95%);
      --_color-frosted: hsl(240 5% 70% / 0.148);
      --_color-frosted-soft: hsl(234 9.8% 60% / 0.06);
      --_color-frosted-strong: hsl(236 6.5% 42% / 0.236);
      --_color-backdrop: hsl(240 5.3% 14.9% / 0.5);
      --_color-contrast-lower: hsl(234 6% 32.9% / 0.324);
      --_color-contrast-low: hsl(240 5.3% 14.9% / 0.5);
      --_color-contrast-medium: hsl(240 6.1% 7% / 0.6);
      --_color-contrast-high: hsl(240 7.1% 11% / 0.7);
      --_color-contrast-higher: hsl(240 8.7% 9% / 0.8);
      --_color-primary: hsl(225 66.7% 1.2%);
      --_color-success: hsl(115 77.5% 27.8%);
      --_color-success-low: hsl(115 77.5% 27.8% / 0.18);
      --_color-success-medium: hsl(115 77.5% 27.8% / 0.6);
      --_color-success-frosted: hsl(109 100% 90% / 0.55);
      --_color-success-frosted-soft: hsl(109 80% 95% / 0.55);
      --_color-warning: hsl(28 97.7% 34.1%);
      --_color-warning-low: hsl(28 97.7% 34.1% / 0.18);
      --_color-warning-medium: hsl(28 97.7% 34.1% / 0.6);
      --_color-warning-frosted: hsl(40 100% 90% / 0.55);
      --_color-warning-frosted-soft: hsl(40 80% 95% / 0.55);
      --_color-error: hsl(357 78% 41%);
      --_color-error-low: hsl(357 78% 41% / 0.18);
      --_color-error-medium: hsl(357 78% 41% / 0.6);
      --_color-error-frosted: hsl(0 100% 90% / 0.55);
      --_color-error-frosted-soft: hsl(0 80% 95% / 0.55);
      --_color-info: hsl(228 83.2% 51%);
      --_color-info-low: hsl(228 83.2% 51% / 0.18);
      --_color-info-medium: hsl(228 83.2% 51% / 0.6);
      --_color-info-frosted: hsl(211 100% 90% / 0.55);
      --_color-info-frosted-soft: hsl(211 80% 95% / 0.55);
    }

    .scheme-dark,
    .scheme-only-dark {
      --_color-focus: #1a44ea;
      --_color-canvas: hsl(225 66.7% 1.2%);
      --_color-surface: hsl(240 2% 10%);
      --_color-frosted: hsl(240 2% 43% / 0.228);
      --_color-frosted-soft: hsl(240 3.7% 26.5% / 0.154);
      --_color-frosted-strong: hsl(240 1.5% 61.8% / 0.302);
      --_color-backdrop: hsl(240 5.3% 14.9% / 0.5);
      --_color-contrast-lower: hsl(240 1.5% 61.8% / 0.302);
      --_color-contrast-low: hsl(240 12.5% 96.9% / 0.45);
      --_color-contrast-medium: hsl(240 12.5% 96.9% / 0.56);
      --_color-contrast-high: hsl(240 12.5% 96.9% / 0.67);
      --_color-contrast-higher: hsl(240 12.5% 96.9% / 0.78);
      --_color-primary: hsl(225 100% 99%);
      --_color-success: hsl(157 84.9% 41.6%);
      --_color-success-low: hsl(157 84.9% 41.6% / 0.18);
      --_color-success-medium: hsl(157 84.9% 41.6% / 0.6);
      --_color-success-frosted: hsl(157 79% 20% / 0.66);
      --_color-success-frosted-soft: hsl(157 59% 15% / 0.66);
      --_color-warning: hsl(28 90.2% 56.1%);
      --_color-warning-low: hsl(28 90.2% 56.1% / 0.18);
      --_color-warning-medium: hsl(28 90.2% 56.1% / 0.6);
      --_color-warning-frosted: hsl(52 79% 20% / 0.66);
      --_color-warning-frosted-soft: hsl(52 59% 15% / 0.66);
      --_color-error: hsl(0 96.9% 62%);
      --_color-error-low: hsl(0 96.9% 62% / 0.18);
      --_color-error-medium: hsl(0 96.9% 62% / 0.6);
      --_color-error-frosted: hsl(0 79% 20% / 0.66);
      --_color-error-frosted-soft: hsl(0 59% 15% / 0.66);
      --_color-info: hsl(210 100% 54.5%);
      --_color-info-low: hsl(210 100% 54.5% / 0.18);
      --_color-info-medium: hsl(210 100% 54.5% / 0.6);
      --_color-info-frosted: hsl(210 79% 20% / 0.66);
      --_color-info-frosted-soft: hsl(210 59% 15% / 0.66);
    }

    @media (prefers-color-scheme: dark) {
      .scheme-light-dark {
        --_color-focus: #1a44ea;
        --_color-canvas: hsl(225 66.7% 1.2%);
        --_color-surface: hsl(240 2% 10%);
        --_color-frosted: hsl(240 2% 43% / 0.228);
        --_color-frosted-soft: hsl(240 3.7% 26.5% / 0.154);
        --_color-frosted-strong: hsl(240 1.5% 61.8% / 0.302);
        --_color-backdrop: hsl(240 5.3% 14.9% / 0.5);
        --_color-contrast-lower: hsl(240 1.5% 61.8% / 0.302);
        --_color-contrast-low: hsl(240 12.5% 96.9% / 0.45);
        --_color-contrast-medium: hsl(240 12.5% 96.9% / 0.56);
        --_color-contrast-high: hsl(240 12.5% 96.9% / 0.67);
        --_color-contrast-higher: hsl(240 12.5% 96.9% / 0.78);
        --_color-primary: hsl(225 100% 99%);
        --_color-success: hsl(157 84.9% 41.6%);
        --_color-success-low: hsl(157 84.9% 41.6% / 0.18);
        --_color-success-medium: hsl(157 84.9% 41.6% / 0.6);
        --_color-success-frosted: hsl(157 79% 20% / 0.66);
        --_color-success-frosted-soft: hsl(157 59% 15% / 0.66);
        --_color-warning: hsl(28 90.2% 56.1%);
        --_color-warning-low: hsl(28 90.2% 56.1% / 0.18);
        --_color-warning-medium: hsl(28 90.2% 56.1% / 0.6);
        --_color-warning-frosted: hsl(52 79% 20% / 0.66);
        --_color-warning-frosted-soft: hsl(52 59% 15% / 0.66);
        --_color-error: hsl(0 96.9% 62%);
        --_color-error-low: hsl(0 96.9% 62% / 0.18);
        --_color-error-medium: hsl(0 96.9% 62% / 0.6);
        --_color-error-frosted: hsl(0 79% 20% / 0.66);
        --_color-error-frosted-soft: hsl(0 59% 15% / 0.66);
        --_color-info: hsl(210 100% 54.5%);
        --_color-info-low: hsl(210 100% 54.5% / 0.18);
        --_color-info-medium: hsl(210 100% 54.5% / 0.6);
        --_color-info-frosted: hsl(210 79% 20% / 0.66);
        --_color-info-frosted-soft: hsl(210 59% 15% / 0.66);
      }
    }
  }
}
"
`;

exports[`should contain correct scss content for file ./dist/_display.scss 1`] = `
"@use "heading";

// @deprecated Use prose-heading-5xl() instead. This API will be removed with the next major release.
@mixin pds-display-large {
  @include heading.prose-heading-5xl;
}
// @deprecated Use prose-heading-4xl() instead. This API will be removed with the next major release.
@mixin pds-display-medium {
  @include heading.prose-heading-4xl;
}
// @deprecated Use prose-heading-3xl() instead. This API will be removed with the next major release.
@mixin pds-display-small {
  @include heading.prose-heading-3xl;
}
"
`;

exports[`should contain correct scss content for file ./dist/_focus.scss 1`] = `
"@use "border";
@use "color";
@use "sass:map";

$pds-focus-offset-map: (
  "small": 2px,
  "none": 0,
);

$pds-focus-border-radius-map: (
  "small": border.$radius-sm,
  "medium": border.$radius-md,
);

@mixin focus-visible($offset: 2px) {
  &:focus-visible {
    outline: 2px solid color.$color-focus;
    outline-offset: $offset;
  }
}
// @deprecated Use focus-visible() instead. This API will be removed with the next major release.
@mixin pds-focus($offset: "small", $border-radius: "small") {
  // it can easily be overwritten on purpose (when placed here) and visually reflected
  @if map.has-key($pds-focus-border-radius-map, $border-radius) {
    border-radius: map.get($pds-focus-border-radius-map, $border-radius);
  } @else {
    @if ($border-radius) {
      border-radius: $border-radius;
    } @else {
      border-radius: map.get($pds-focus-border-radius-map, "none");
    }
  }
  &:focus {
    outline: border.$pds-border-width-base solid color.$color-focus;
    @if map.has-key($pds-focus-offset-map, $offset) {
      outline-offset: map.get($pds-focus-offset-map, $offset);
    } @else {
      @if ($offset) {
        outline-offset: $offset;
      } @else {
        outline-offset: map.get($pds-focus-offset-map, "small");
      }
    }
  }
  // why? have a look at this article https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
  &:focus:not(:focus-visible) {
    outline-color: transparent;
  }
}
"
`;

exports[`should contain correct scss content for file ./dist/_font.scss 1`] = `
"$font-porsche-next:
  "Porsche Next", "Arial Narrow", Arial, "Heiti SC", SimHei, sans-serif;
$font-porsche-next-zh-hans:
  "Porsche Next", "PingFang SC", "Microsoft YaHei", "Noto Sans SC",
  "Arial Narrow", Arial, sans-serif;
$font-porsche-next-zh-hant:
  "Porsche Next", "PingFang TC", "Microsoft JhengHei", "Noto Sans TC",
  "Arial Narrow", Arial, sans-serif;
$font-porsche-next-ja:
  "Porsche Next", "Hiragino Sans", "Yu Gothic", "Noto Sans JP", "Arial Narrow",
  Arial, sans-serif;
$font-porsche-next-ko:
  "Porsche Next", "Apple SD Gothic Neo", "Malgun Gothic", "Noto Sans KR",
  "Arial Narrow", Arial, sans-serif;
// @deprecated Use $font-porsche-next instead. This API will be removed with the next major release.
$pds-font-family:
  "Porsche Next", "Arial Narrow", Arial, "Heiti SC", SimHei, sans-serif;

@mixin cjk-font-family {
  /* Simplified Chinese */
  &:lang(zh-Hans),
  &:lang(zh-CN),
  &:lang(zh-SG) {
    font-family: $font-porsche-next-zh-hans;
  }

  /* Traditional Chinese */
  &:lang(zh-Hant),
  &:lang(zh-TW),
  &:lang(zh-HK),
  &:lang(zh-MO) {
    font-family: $font-porsche-next-zh-hant;
  }

  /* Japanese */
  &:lang(ja) {
    font-family: $font-porsche-next-ja;
  }

  /* Korean */
  &:lang(ko) {
    font-family: $font-porsche-next-ko;
  }
}

$leading-normal: calc(6px + 2.125ex);
// @deprecated Use $leading-normal instead. This API will be removed with the next major release.
$pds-font-line-height: calc(6px + 2.125ex);

$typescale-2xs: 0.75rem;
$typescale-xs: 0.875rem;
$typescale-sm: 1rem;
$typescale-md: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
$typescale-lg: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
$typescale-xl: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
$typescale-2xl: clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem);
$typescale-3xl: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem);
$typescale-4xl: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
$typescale-5xl: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
// @deprecated Use $typescale-2xs instead. This API will be removed with the next major release.
$pds-font-size-text-xx-small: 0.75rem;
// @deprecated Use $typescale-xs instead. This API will be removed with the next major release.
$pds-font-size-text-x-small: 0.875rem;
// @deprecated Use $typescale-sm instead. This API will be removed with the next major release.
$pds-font-size-text-small: 1rem;
// @deprecated Use $typescale-md instead. This API will be removed with the next major release.
$pds-font-size-text-medium: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
// @deprecated Use $typescale-lg instead. This API will be removed with the next major release.
$pds-font-size-text-large: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
// @deprecated Use $typescale-xl instead. This API will be removed with the next major release.
$pds-font-size-text-x-large: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
// @deprecated Use $typescale-sm instead. This API will be removed with the next major release.
$pds-font-size-heading-small: 1rem;
// @deprecated Use $typescale-md instead. This API will be removed with the next major release.
$pds-font-size-heading-medium: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
// @deprecated Use $typescale-lg instead. This API will be removed with the next major release.
$pds-font-size-heading-large: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
// @deprecated Use $typescale-xl instead. This API will be removed with the next major release.
$pds-font-size-heading-x-large: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
// @deprecated Use $typescale-2xl instead. This API will be removed with the next major release.
$pds-font-size-heading-xx-large: clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem);
// @deprecated Use $typescale-3xl instead. This API will be removed with the next major release.
$pds-font-size-display-small: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem);
// @deprecated Use $typescale-4xl instead. This API will be removed with the next major release.
$pds-font-size-display-medium: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
// @deprecated Use $typescale-5xl instead. This API will be removed with the next major release.
$pds-font-size-display-large: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);

$font-weight-normal: 400;
$font-weight-semibold: 600;
$font-weight-bold: 700;
// @deprecated Use $font-weight-normal instead. This API will be removed with the next major release.
$pds-font-weight-regular: 400;
// @deprecated Use $font-weight-semibold instead. This API will be removed with the next major release.
$pds-font-weight-semi-bold: 600;
// @deprecated Use $font-weight-bold instead. This API will be removed with the next major release.
$pds-font-weight-bold: 700;

// @deprecated This API will be removed with the next major release.
$pds-font-hyphenation-style-overflow-wrap: break-word;
// @deprecated This API will be removed with the next major release.
$pds-font-hyphenation-style-hyphens: var(--p-hyphens, auto);
// @deprecated This API will be removed with the next major release.
$pds-font-style-normal: normal;
// @deprecated This API will be removed with the next major release.
$pds-font-style-italic: italic;
// @deprecated This API will be removed with the next major release.
$pds-font-variant: normal;
"
`;

exports[`should contain correct scss content for file ./dist/_gradient.scss 1`] = `
"$gradient-stops-fade-dark:
  hsla(0, 0%, 0%, 0.8) 0%,
  hsla(0, 0%, 0%, 0.8) 8.1%,
  hsla(0, 0%, 0%, 0.8) 15.5%,
  hsla(0, 0%, 0%, 0.8) 22.5%,
  hsla(0, 0%, 0%, 0.78) 29%,
  hsla(0, 0%, 0%, 0.73) 35.3%,
  hsla(0, 0%, 0%, 0.67) 41.2%,
  hsla(0, 0%, 0%, 0.6) 47.1%,
  hsla(0, 0%, 0%, 0.52) 52.9%,
  hsla(0, 0%, 0%, 0.44) 58.8%,
  hsla(0, 0%, 0%, 0.33) 64.7%,
  hsla(0, 0%, 0%, 0.22) 71%,
  hsla(0, 0%, 0%, 0.12) 77.5%,
  hsla(0, 0%, 0%, 0.05) 84.5%,
  hsla(0, 0%, 0%, 0.011) 91.9%,
  hsla(0, 0%, 0%, 0) 100%;
// @deprecated Use $gradient-stops-fade-dark instead. This API will be removed with the next major release.
@mixin pds-gradient-to-bottom {
  background: linear-gradient(to bottom, $gradient-stops-fade-dark);
}
// @deprecated Use $gradient-stops-fade-dark instead. This API will be removed with the next major release.
@mixin pds-gradient-to-left {
  background: linear-gradient(to left, $gradient-stops-fade-dark);
}
// @deprecated Use $gradient-stops-fade-dark instead. This API will be removed with the next major release.
@mixin pds-gradient-to-right {
  background: linear-gradient(to right, $gradient-stops-fade-dark);
}
// @deprecated Use $gradient-stops-fade-dark instead. This API will be removed with the next major release.
@mixin pds-gradient-to-top {
  background: linear-gradient(to top, $gradient-stops-fade-dark);
}
"
`;

exports[`should contain correct scss content for file ./dist/_grid.scss 1`] = `
"@mixin pds-grid {
  margin: 0 var(--pds-internal-grid-margin, 0);
  display: grid;
  padding: 0 calc(50% - var(--pds-internal-grid-margin, 0px) - 2560px / 2);
  grid-gap: clamp(16px, 1.25vw + 12px, 36px);
  max-width: var(--pds-internal-grid-width-max, 2560px);
  min-width: var(--pds-internal-grid-width-min, 320px);
  box-sizing: content-box;
  grid-template-columns:
    [full-start] minmax(
      0,
      var(
        --pds-internal-grid-outer-column,
        calc(
          var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)
        )
      )
    )
    [wide-start extended-start basic-start narrow-start] repeat(
      6,
      minmax(0, 1fr)
    )
    [narrow-end basic-end extended-end wide-end] minmax(
      0,
      var(
        --pds-internal-grid-outer-column,
        calc(
          var(--pds-internal-grid-safe-zone) - clamp(16px, 1.25vw + 12px, 36px)
        )
      )
    )
    [full-end];
  --pds-internal-grid-safe-zone: max(22px, 10.625vw - 12px);
  --pds-grid-basic-span-one-half: span 3;
  --pds-grid-basic-span-one-third: span 2;
  --pds-grid-narrow-span-one-half: span 3;
  --pds-grid-basic-span-two-thirds: span 4;
  --pds-grid-extended-span-one-half: span 3;

  @media (min-width: 760px) {
    grid-template-columns:
      [full-start] minmax(
        0,
        var(
          --pds-internal-grid-outer-column,
          calc(
            var(--pds-internal-grid-safe-zone) - clamp(
                16px,
                1.25vw + 12px,
                36px
              )
          )
        )
      )
      [wide-start] minmax(0, 1fr) [extended-start] minmax(
        0,
        1fr
      ) [basic-start] repeat(2, minmax(0, 1fr))
      [narrow-start] repeat(8, minmax(0, 1fr)) [narrow-end] repeat(
        2,
        minmax(0, 1fr)
      ) [basic-end] minmax(0, 1fr)
      [extended-end] minmax(0, 1fr) [wide-end] minmax(
        0,
        var(
          --pds-internal-grid-outer-column,
          calc(
            var(--pds-internal-grid-safe-zone) - clamp(
                16px,
                1.25vw + 12px,
                36px
              )
          )
        )
      )
      [full-end];
    --pds-internal-grid-safe-zone: calc(5vw - 16px);
    --pds-grid-basic-span-one-half: span 6;
    --pds-grid-basic-span-one-third: span 4;
    --pds-grid-narrow-span-one-half: span 4;
    --pds-grid-basic-span-two-thirds: span 8;
    --pds-grid-extended-span-one-half: span 7;
  }

  @media (min-width: 1920px) {
    --pds-internal-grid-safe-zone: min(50vw - 880px, 400px);
  }
}
"
`;

exports[`should contain correct scss content for file ./dist/_grid-basic.scss 1`] = `
"$pds-grid-basic-column-start: basic-start;
$pds-grid-basic-column-end: basic-end;
$pds-grid-basic-span-one-half: var(--pds-grid-basic-span-one-half);
$pds-grid-basic-span-one-third: var(--pds-grid-basic-span-one-third);
$pds-grid-basic-span-two-thirds: var(--pds-grid-basic-span-two-thirds);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-basic-offset.scss 1`] = `
"$pds-grid-basic-offset-base: max(22px, 10.625vw - 12px);
$pds-grid-basic-offset-s: calc(
  calc(5vw - 16px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) *
                15
            ) /
            16
        )
    ) *
    2
);
$pds-grid-basic-offset-xxl: calc(
  max(0px, 50vw - 2560px/2) + min(50vw - 880px, 400px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              min(100vw, 2560px) - min(50vw - 880px, 400px) *
                2 - clamp(16px, 1.25vw + 12px, 36px) * 15
            ) /
            16
        )
    ) *
    2
);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-extended.scss 1`] = `
"$pds-grid-extended-column-start: extended-start;
$pds-grid-extended-column-end: extended-end;
$pds-grid-extended-span-one-half: var(--pds-grid-extended-span-one-half);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-extended-offset.scss 1`] = `
"$pds-grid-extended-offset-base: max(22px, 10.625vw - 12px);
$pds-grid-extended-offset-s: calc(
  calc(5vw - 16px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) *
                15
            ) /
            16
        )
    ) *
    1
);
$pds-grid-extended-offset-xxl: calc(
  max(0px, 50vw - 2560px/2) + min(50vw - 880px, 400px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              min(100vw, 2560px) - min(50vw - 880px, 400px) *
                2 - clamp(16px, 1.25vw + 12px, 36px) * 15
            ) /
            16
        )
    ) *
    1
);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-full.scss 1`] = `
"$pds-grid-full-column-start: full-start;
$pds-grid-full-column-end: full-end;
"
`;

exports[`should contain correct scss content for file ./dist/_grid-full-offset.scss 1`] = `
"$pds-grid-full-offset: max(0px, 50vw - 2560px/2);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-gap.scss 1`] = `
"$pds-grid-gap: clamp(16px, 1.25vw + 12px, 36px);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-narrow.scss 1`] = `
"$pds-grid-narrow-column-start: narrow-start;
$pds-grid-narrow-column-end: narrow-end;
$pds-grid-narrow-span-one-half: var(--pds-grid-narrow-span-one-half);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-narrow-offset.scss 1`] = `
"$pds-grid-narrow-offset-base: max(22px, 10.625vw - 12px);
$pds-grid-narrow-offset-s: calc(
  calc(5vw - 16px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              100vw - calc(5vw - 16px) * 2 - clamp(16px, 1.25vw + 12px, 36px) *
                15
            ) /
            16
        )
    ) *
    4
);
$pds-grid-narrow-offset-xxl: calc(
  max(0px, 50vw - 2560px/2) + min(50vw - 880px, 400px) +
    (
      clamp(16px, 1.25vw + 12px, 36px) +
        calc(
          (
              min(100vw, 2560px) - min(50vw - 880px, 400px) *
                2 - clamp(16px, 1.25vw + 12px, 36px) * 15
            ) /
            16
        )
    ) *
    4
);
"
`;

exports[`should contain correct scss content for file ./dist/_grid-wide.scss 1`] = `
"$pds-grid-wide-column-start: wide-start;
$pds-grid-wide-column-end: wide-end;
"
`;

exports[`should contain correct scss content for file ./dist/_grid-wide-offset.scss 1`] = `
"$pds-grid-wide-offset-base: max(22px, 10.625vw - 12px);
$pds-grid-wide-offset-s: calc(5vw - 16px);
$pds-grid-wide-offset-xxl: calc(
  max(0px, 50vw - 2560px/2) + min(50vw - 880px, 400px)
);
"
`;

exports[`should contain correct scss content for file ./dist/_heading.scss 1`] = `
"@use "font";
@use "color";

@mixin -prose-heading($size, $weight) {
  @include font.cjk-font-family;
  font: $weight $size / font.$leading-normal font.$font-porsche-next;
  color: color.$color-primary;
}

@mixin prose-heading-5xl {
  @include -prose-heading(font.$typescale-5xl, font.$font-weight-normal);
}
@mixin prose-heading-4xl {
  @include -prose-heading(font.$typescale-4xl, font.$font-weight-normal);
}
@mixin prose-heading-3xl {
  @include -prose-heading(font.$typescale-3xl, font.$font-weight-normal);
}
@mixin prose-heading-2xl {
  @include -prose-heading(font.$typescale-2xl, font.$font-weight-normal);
}
@mixin prose-heading-xl {
  @include -prose-heading(font.$typescale-xl, font.$font-weight-normal);
}
@mixin prose-heading-lg {
  @include -prose-heading(font.$typescale-lg, font.$font-weight-normal);
}
@mixin prose-heading-md {
  @include -prose-heading(font.$typescale-md, font.$font-weight-normal);
}
@mixin prose-heading-sm {
  @include -prose-heading(font.$typescale-sm, font.$font-weight-semibold);
}
@mixin prose-heading-xs {
  @include -prose-heading(font.$typescale-xs, font.$font-weight-semibold);
}
@mixin prose-heading-2xs {
  @include -prose-heading(font.$typescale-2xs, font.$font-weight-semibold);
}
// @deprecated Use prose-heading-2xl() instead. This API will be removed with the next major release.
@mixin pds-heading-xx-large {
  @include prose-heading-2xl();
}
// @deprecated Use prose-heading-xl() instead. This API will be removed with the next major release.
@mixin pds-heading-x-large {
  @include prose-heading-xl();
}
// @deprecated Use prose-heading-lg() instead. This API will be removed with the next major release.
@mixin pds-heading-large {
  @include prose-heading-lg();
}
// @deprecated Use prose-heading-md() instead. This API will be removed with the next major release.
@mixin pds-heading-medium {
  @include prose-heading-md();
}
// @deprecated Use prose-heading-sm() instead. This API will be removed with the next major release.
@mixin pds-heading-small {
  @include prose-heading-sm();
}
"
`;

exports[`should contain correct scss content for file ./dist/_index.scss 1`] = `
"@forward "border";
@forward "blur";
@forward "breakpoint";
@forward "shadow";
@forward "spacing";
@forward "motion";
@forward "gradient";
@forward "color";
@forward "font";
@forward "heading";
@forward "text";
@forward "display";
@forward "skeleton";
@forward "focus";
@forward "media-query";
@forward "grid";
@forward "grid-gap";
@forward "grid-full";
@forward "grid-full-offset";
@forward "grid-wide";
@forward "grid-wide-offset";
@forward "grid-extended";
@forward "grid-extended-offset";
@forward "grid-basic";
@forward "grid-basic-offset";
@forward "grid-narrow";
@forward "grid-narrow-offset";
"
`;

exports[`should contain correct scss content for file ./dist/_media-query.scss 1`] = `
"@use "breakpoint";
@use "sass:map";

$pds-breakpoints: (
  "xs": breakpoint.$breakpoint-xs,
  "sm": breakpoint.$breakpoint-sm,
  "md": breakpoint.$breakpoint-md,
  "lg": breakpoint.$breakpoint-lg,
  "xl": breakpoint.$breakpoint-xl,
  "2xl": breakpoint.$breakpoint-2xl,
  // @deprecated
  "base": breakpoint.$pds-breakpoint-base,
  // @deprecated Use 'sm' instead.
  "s": breakpoint.$breakpoint-sm,
  // @deprecated Use 'md' instead.
  "m": breakpoint.$breakpoint-md,
  // @deprecated Use 'lg' instead.
  "l": breakpoint.$breakpoint-lg,
  // @deprecated Use '2xl' instead.
  "xxl": breakpoint.$breakpoint-2xl,
);

@mixin media-query-min($min: null) {
  @if map.has-key($pds-breakpoints, $min) {
    @media (min-width: #{map.get($pds-breakpoints, $min)}px) {
      @content;
    }
  } @else {
    @error "Passed #{$min} breakpoint is not available for used media-query-min() mixin.";
  }
}
@mixin media-query-max($max: null) {
  @if map.has-key($pds-breakpoints, $max) {
    @media (max-width: #{map.get($pds-breakpoints, $max) - 1}px) {
      @content;
    }
  } @else {
    @error "Passed #{$max} breakpoint is not available for used media-query-max() mixin.";
  }
}
@mixin media-query-min-max($min: null, $max: null) {
  @if map.has-key($pds-breakpoints, $min) and
    map.has-key($pds-breakpoints, $max)
  {
    @media (min-width: #{map.get($pds-breakpoints, $min)}px) and (max-width: #{map.get($pds-breakpoints, $max) - 1}px) {
      @content;
    }
  } @else {
    @error "Passed #{$min} and/or #{$max} breakpoint is not available for used media-query-min-max() mixin.";
  }
}
// @deprecated Use media-query-min() instead. This API will be removed with the next major release.
@mixin pds-media-query-min($min: null) {
  @include media-query-min($min) {
    @content;
  }
}
// @deprecated Use media-query-max() instead. This API will be removed with the next major release.
@mixin pds-media-query-max($max: null) {
  @include media-query-max($max) {
    @content;
  }
}
// @deprecated Use media-query-min-max() instead. This API will be removed with the next major release.
@mixin pds-media-query-min-max($min: null, $max: null) {
  @include media-query-min-max($min, $max) {
    @content;
  }
}
"
`;

exports[`should contain correct scss content for file ./dist/_motion.scss 1`] = `
"$duration-sm: 0.25s;
$duration-md: 0.4s;
$duration-lg: 0.6s;
$duration-xl: 1.2s;
// @deprecated Use $duration-sm instead. This API will be removed with the next major release.
$pds-motion-duration-short: 0.25s;
// @deprecated Use $duration-md instead. This API will be removed with the next major release.
$pds-motion-duration-moderate: 0.4s;
// @deprecated Use $duration-lg instead. This API will be removed with the next major release.
$pds-motion-duration-long: 0.6s;
// @deprecated Use $duration-xl instead. This API will be removed with the next major release.
$pds-motion-duration-very-long: 1.2s;
$ease-in-out: cubic-bezier(0.25, 0.1, 0.25, 1);
$ease-in: cubic-bezier(0, 0, 0.2, 1);
$ease-out: cubic-bezier(0.4, 0, 0.5, 1);
// @deprecated Use $ease-in-out instead. This API will be removed with the next major release.
$pds-motion-easing-base: cubic-bezier(0.25, 0.1, 0.25, 1);
// @deprecated Use $ease-in instead. This API will be removed with the next major release.
$pds-motion-easing-in: cubic-bezier(0, 0, 0.2, 1);
// @deprecated Use $ease-out instead. This API will be removed with the next major release.
$pds-motion-easing-out: cubic-bezier(0.4, 0, 0.5, 1);
"
`;

exports[`should contain correct scss content for file ./dist/_shadow.scss 1`] = `
"$shadow-sm: 0px 3px 8px rgba(0, 0, 0, 0.16);
$shadow-md: 0px 4px 16px rgba(0, 0, 0, 0.16);
$shadow-lg: 0px 8px 40px rgba(0, 0, 0, 0.16);
// @deprecated Use $shadow-sm instead. This API will be removed with the next major release.
@mixin pds-drop-shadow-low {
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
// @deprecated Use $shadow-md instead. This API will be removed with the next major release.
@mixin pds-drop-shadow-medium {
  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.16);
}
// @deprecated Use $shadow-lg instead. This API will be removed with the next major release.
@mixin pds-drop-shadow-high {
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
"
`;

exports[`should contain correct scss content for file ./dist/_skeleton.scss 1`] = `
"@use "border";
@use "color";
@use "motion";

@mixin skeleton() {
  @keyframes skeleton {
    from {
      background-position-x: 100%;
    }
    to {
      background-position-x: -100%;
    }
  }

  display: block;
  border-radius: border.$radius-sm;
  background: transparent
    linear-gradient(
      to right,
      color.$color-frosted 0%,
      color.$color-frosted-strong 50%,
      color.$color-frosted 100%
    )
    0 0 / 200% 100%;
  animation: skeleton motion.$duration-xl motion.$ease-in-out infinite;
}
// @deprecated Use skeleton() instead. This API will be removed with the next major release.
@mixin pds-skeleton($theme: "light") {
  @include skeleton();
  @if ($theme == "dark") {
    color-scheme: dark;
  } @else if ($theme == "auto") {
    color-scheme: light dark;
  } @else {
    color-scheme: light;
  }
}
"
`;

exports[`should contain correct scss content for file ./dist/_spacing.scss 1`] = `
"$spacing-fluid-xs: clamp(4px, 0.25vw + 3px, 8px);
$spacing-fluid-sm: clamp(8px, 0.5vw + 6px, 16px);
$spacing-fluid-md: clamp(16px, 1.25vw + 12px, 36px);
$spacing-fluid-lg: clamp(32px, 2.75vw + 23px, 76px);
$spacing-fluid-xl: clamp(48px, 3vw + 38px, 96px);
$spacing-fluid-2xl: clamp(80px, 7.5vw + 56px, 200px);
// @deprecated Use $spacing-fluid-xs instead. This API will be removed with the next major release.
$pds-spacing-fluid-x-small: clamp(4px, 0.25vw + 3px, 8px);
// @deprecated Use $spacing-fluid-sm instead. This API will be removed with the next major release.
$pds-spacing-fluid-small: clamp(8px, 0.5vw + 6px, 16px);
// @deprecated Use $spacing-fluid-md instead. This API will be removed with the next major release.
$pds-spacing-fluid-medium: clamp(16px, 1.25vw + 12px, 36px);
// @deprecated Use $spacing-fluid-lg instead. This API will be removed with the next major release.
$pds-spacing-fluid-large: clamp(32px, 2.75vw + 23px, 76px);
// @deprecated Use $spacing-fluid-xl instead. This API will be removed with the next major release.
$pds-spacing-fluid-x-large: clamp(48px, 3vw + 38px, 96px);
// @deprecated Use $spacing-fluid-2xl instead. This API will be removed with the next major release.
$pds-spacing-fluid-xx-large: clamp(80px, 7.5vw + 56px, 200px);
$spacing-static-2xs: 1px;
$spacing-static-xs: 4px;
$spacing-static-sm: 8px;
$spacing-static-md: 16px;
$spacing-static-lg: 32px;
$spacing-static-xl: 48px;
$spacing-static-2xl: 80px;
// @deprecated Use $spacing-static-xs instead. This API will be removed with the next major release.
$pds-spacing-static-x-small: 4px;
// @deprecated Use $spacing-static-sm instead. This API will be removed with the next major release.
$pds-spacing-static-small: 8px;
// @deprecated Use $spacing-static-md instead. This API will be removed with the next major release.
$pds-spacing-static-medium: 16px;
// @deprecated Use $spacing-static-lg instead. This API will be removed with the next major release.
$pds-spacing-static-large: 32px;
// @deprecated Use $spacing-static-xl instead. This API will be removed with the next major release.
$pds-spacing-static-x-large: 48px;
// @deprecated Use $spacing-static-2xl instead. This API will be removed with the next major release.
$pds-spacing-static-xx-large: 80px;
"
`;

exports[`should contain correct scss content for file ./dist/_text.scss 1`] = `
"@use "font";
@use "color";

@mixin -prose-text($size) {
  @include font.cjk-font-family;
  font: font.$font-weight-normal $size / font.$leading-normal
    font.$font-porsche-next;
  color: color.$color-primary;
}

@mixin prose-text-5xl {
  @include -prose-text(font.$typescale-5xl);
}
@mixin prose-text-4xl {
  @include -prose-text(font.$typescale-4xl);
}
@mixin prose-text-3xl {
  @include -prose-text(font.$typescale-3xl);
}
@mixin prose-text-2xl {
  @include -prose-text(font.$typescale-2xl);
}
@mixin prose-text-xl {
  @include -prose-text(font.$typescale-xl);
}
@mixin prose-text-lg {
  @include -prose-text(font.$typescale-lg);
}
@mixin prose-text-md {
  @include -prose-text(font.$typescale-md);
}
@mixin prose-text-sm {
  @include -prose-text(font.$typescale-sm);
}
@mixin prose-text-xs {
  @include -prose-text(font.$typescale-xs);
}
@mixin prose-text-2xs {
  @include -prose-text(font.$typescale-2xs);
}
// @deprecated Use prose-text-xl() instead. This API will be removed with the next major release.
@mixin pds-text-x-large {
  @include prose-text-xl();
}
// @deprecated Use prose-text-lg() instead. This API will be removed with the next major release.
@mixin pds-text-large {
  @include prose-text-lg();
}
// @deprecated Use prose-text-md() instead. This API will be removed with the next major release.
@mixin pds-text-medium {
  @include prose-text-md();
}
// @deprecated Use prose-text-sm() instead. This API will be removed with the next major release.
@mixin pds-text-small {
  @include prose-text-sm();
}
// @deprecated Use prose-text-xs() instead. This API will be removed with the next major release.
@mixin pds-text-x-small {
  @include prose-text-xs();
}
// @deprecated Use prose-text-2xs() instead. This API will be removed with the next major release.
@mixin pds-text-xx-small {
  @include prose-text-2xs();
}
"
`;
